# alphasearch

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  SECURITY.md  chat_ui.jsx  main.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: test.yml
docs/: tabular-narrative-approach.md
tests/: test_config.py  test_exceptions.py  test_models.py  test_tabular.py
treerag/: __init__.py  bm25.py  config.py  exceptions.py  folder_manager.py  indexer.py  llm_client.py  mcts.py  models.py  pdf_processor.py  pipeline.py  router.py  tabular_indexer.py  tabular_processor.py
